--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 body {
 	margin: 0;
 }
 
 * {
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -24,13 +27,12 @@ a:active {
 header {
 	display: flex;
 	align-items: center;
-	background-color: aqua;
-	height: 50px;
+	padding: 1% 3%;
 }
 
 header svg {
-	width: 32px;
-	height: 32px;
+	width: 64px;
+	height: 64px;
 }
 
 /* FIN HEADER */
@@ -40,26 +42,46 @@ header svg {
 #index {
 	display: flex;
 	justify-content: center;
-	align-items: center;
 }
 
 #index section {
 	display: flex;
 	flex-direction: column;
 	padding: 1% 2%;
-	border: 2px solid black;
-	margin-top: 15vw;
+	margin-top: 5vw;
 	width: 25%;
+}
+
+#index section #messageConnexion {
+	margin: 5% 0;
+}
+
+#index section #messageConnexion h2 {
+	margin: 2% 0;
+	text-align: center;
+	padding: 1% 0;
+}
+
+#index section #messageConnexion p {
+	text-align: center;
+	color: deepskyblue;
+}
+
+#index section > h2:nth-child(2){
+	margin-bottom: 4%;
 }
 
 #index form {
 	display: flex;
 	flex-direction: column;
+	border-radius: 2px;
+	box-shadow: 0px 0px 20px 3px deepskyblue;
+	padding: 4%;
 }
 
 #index form input[type=submit] {
 	width: 40%;
-	color: aqua;
+	align-self: center;
 }
 
 #index form div{
@@ -88,3 +110,7 @@ header svg {
 /* FIN PAGE DE D'AJOUT, SUPPRESION, MODIF UTILISATEUR */
 
 /* FIN ALEXIS */
+
+/* NATHAN */
+
+/* FIN NATHAN */
